stuck with css modules bug (?)

--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -1,3 +1,4 @@
-.helloHeader {
-  background-color: red;
+.ModifiedGuestCardList {
+  composes: GuestCardList from "./GuestList/style.scss";
+  display: block;
 }
